--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,4 +15,5 @@ dependencies = [
     "python-multipart>=0.0.12",
     "openpyxl>=3.1.5",
     "loguru>=0.7.2",
+    "prometheus-fastapi-instrumentator>=7.1.0",
 ]
