--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,4 +16,5 @@ dependencies = [
     "openpyxl>=3.1.5",
     "loguru>=0.7.2",
     "prometheus-fastapi-instrumentator>=7.1.0",
+    "pytz>=2024.1",
 ]
