feat(auth): add admin session expiration check based on creation date
- Introduce admin_expiration_date setting to limit admin session validity
- Store session creation datetime in a new secure cookie 'session_created'
- Refuse admin sessions created before the expiration date with 401 errors
- Update web, dashboard, and payments routers to enforce admin session expiry
- Enhance base address handling by removing leading numeric prefixes for grouping
- Update .env.example and architecture docs with admin expiration date usage details

--- a/env.example
+++ b/env.example
@@ -12,3 +12,6 @@ PORT=4001
 
 USER_USERNAME=user
 USER_PASSWORD=user
+
+# Optional: Set expiration date for admin accounts (format: YYYY-MM-DD)
+# ADMIN_EXPIRATION_DATE=2025-12-31
